# terraprisma

./: .gitignore  .gitmodules  README.md  flake.nix
bootstrapper/: Cargo.toml
bootstrapper/scripts/: dotnet.bat
bootstrapper/src/: dotnet.rs  main.rs
docs/: config.json  index.html  styles.css
docs/content/: index.html  styles-docs.css  styles.css
docs/generator/: Terraprisma.Docs.sln  Terraprisma.Docs.sln.DotSettings  deps.nix
docs/src/: api-doc-mockup.html  styles.css  test.md
docs/src/subdir/: hi.md
installer/: Cargo.toml
installer/scripts/: dotnet.sh
installer/src/: dotnet.rs  main.rs  steam.rs
installer/src/locators/: mod.rs  steam.rs
launcher/: Cargo.toml
launcher/src/: install.rs  main.rs  paths.rs
nightglow/: Terraprisma.Nightglow.sln  Terraprisma.Nightglow.sln.DotSettings
nightglow/Terraprisma.Nightglow/: Program.cs  Terraprisma.Nightglow.csproj
src/: Terraprisma.sln
src/Terraprisma.Launcher/: Program.cs  Terraprisma.Launcher.csproj  Terraprisma.Launcher.xml
src/Terraprisma.Patcher/: Terraprisma.Patcher.csproj  Terraprisma.Patcher.xml  TestDocClass.cs
terraprisma/src/: Terraprisma.sln  Terraprisma.sln.DotSettings
terraria-differ/: .gitignore  README.md  diff-TerrariaBuildable.sh  diff-TerrariaModernized.sh  diff-TerrariaUnified.sh  diff-mods.sh  filelist.txt  generate-vanilla-patches.sh  install-game-versions.sh  patch-TerrariaBuildable.sh  patch-TerrariaModernized.sh  patch-TerrariaUnified.sh  patch-mods.sh  regenerate-mod-sources.sh
terraria-differ/solutions/: .editorconfig  TerrariaBuildable.sln  TerrariaUnified.sln  (+1 more)
(+608 files in other folders)
