[package]
name = "terraprisma-launcher"
edition = "2021"

version = "0.1.0"
authors = ["pbone", "tomat"]
description = "Lightweight launcher for Terraria + Terraprisma that manages .NET, etc."
license-file = "../LICENSE"

[dependencies]
flate2 = "1.0.26"
regex = "1.9.0"
steamlocate = "1.2.1"
tar = "0.4.38"
ureq = "2.7.1"
which = "4.4.0"
zip = "0.6.6"
inquire = "0.6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0.4"
